fix overflow on isolation badge in DNS mappings

--- a/client/assets/styles/scss/popover/popover-dns-mappings.scss
+++ b/client/assets/styles/scss/popover/popover-dns-mappings.scss
@@ -166,6 +166,7 @@
       height: 16px;
       line-height: 14px;
       margin-top: 3px;
+      max-width: 100%;
     }
 
     // branch cell
